--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
     <artifactId>Movierp-server</artifactId>
     <version>0.1.0</version>
 
-    <!-- Java version -->
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <start-class>com.movierp.server.Application</start-class>
         <java.version>1.8</java.version>
     </properties>
 
@@ -46,19 +47,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <!-- Remote repositories where maven gets latest releases -->
-    <repositories>
-        <repository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
