--- a/.gitignore
+++ b/.gitignore
@@ -164,14 +164,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# NetBeans
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-
 # Maven
 
 target/
@@ -186,3 +178,5 @@ buildNumber.properties
 
 # Exclude maven wrapper
 !/.mvn/wrapper/maven-wrapper.jar
+.idea/inspectionProfiles/
+### NetBeans template
