--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.12</version>
+        </dependency>
     </dependencies>
 
     <!-- Build configuration. We are using spring boot -->
