--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://146.185.151.244:3306/movierp
-spring.datasource.username = default
-spring.datasource.password = j4WeZjjnEH5TSxqJ
+spring.datasource.username =
+spring.datasource.password =
 spring.data.rest.base-path = /api
 
 # Show or not log for each sql query
